--- a/Vue/01.html
+++ b/Vue/01.html
@@ -15,8 +15,15 @@
 		 可以使用其他的双标签，不能使用HTML和BODY
 		 -->
 		<div id="app">
-		{{massage}}
+			{{massage}}
+			
+			<h2> {{ school.name }} {{ school.mobile }} </h2>
+			<ul>
+				<li>{{campus[0]}}</li>
+				<li>{{campus[1]}}</li>
+			</ul>
 		</div>
+		
 		<!--{{}}是把数据跟结构结合起来，也叫插值表达式-->
 		<!-- 开发环境版本，包含了有帮助的命令行警告 -->
 		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -24,7 +31,12 @@
 			var app = new Vue({
 				el:"#app",
 				data:{
-					massage:"你好 Vue!"
+					massage:"你好 Vue!",
+					school:{
+						name:"黑马程序员",
+						mobile:"123456"
+					},
+					campus:["北京校区","上海校区","广州校区","深圳"]
 				}
 			})
 			
